fix button authorize in swagger
