# backend/internal/handlers/responses.go
@@ -10,6 +10,13 @@ type RegisterResponse struct {
 	UserID string `json:"user_id"`
 }
 
+type OAuth2Response struct {
+	AccessToken  string `json:"access_token"`
+	TokenType    string `json:"token_type"`
+	ExpiresIn    int    `json:"expires_in"`
+	RefreshToken string `json:"refresh_token"`
+}
+
 type LoginResponse struct {
 	AccessToken  string `json:"accessToken"`
 	RefreshToken string `json:"refreshToken"`
